--- a/xpi/content/css/alt_addonsmanager.css
+++ b/xpi/content/css/alt_addonsmanager.css
@@ -21,8 +21,7 @@
 	  background-color: transparent !important;
 	}
 
-	#addons-page #list-view #addon-list-empty .alert,
-	#addons-page #updates-list-empty .alert,
+	#addons-page .alert,
 	#addons-page #detail-view,
 	#addons-page #addon-list,
 	#addons-page #search-list,
