--- a/xpi/content/css/mode_icons_and_text.css
+++ b/xpi/content/css/mode_icons_and_text.css
@@ -148,12 +148,9 @@
 	}
 	
 	/* Main menu button & call button fix */
-	#nav-bar #PanelUI-menu-button .toolbarbutton-badge,
-	#nav-bar #PanelUI-menu-button .toolbarbutton-badge-container,
-	#nav-bar #loop-button .toolbarbutton-badge,
-	#nav-bar #loop-button .toolbarbutton-badge-container,
-	#nav-bar #loop-button-throttled .toolbarbutton-badge,
-	#nav-bar #loop-button-throttled .toolbarbutton-badge-container{
+	#nav-bar .toolbarbutton-1 .toolbarbutton-badge,
+	#nav-bar .toolbarbutton-1 .toolbarbutton-badge-container,
+	#nav-bar .toolbarbutton-1 .toolbarbutton-badge-stack {
 	  -moz-appearance:none !important;
 	  background:none !important;
 	  border:1px solid transparent !important;
