--- a/xpi/content/css/mode_txtonly.css
+++ b/xpi/content/css/mode_txtonly.css
@@ -99,16 +99,16 @@
 	}
 	
 	/* Main menu button & call button fix */
-	toolbar #PanelUI-menu-button .toolbarbutton-badge,
-	toolbar #PanelUI-menu-button .toolbarbutton-badge-container,
-	toolbar #loop-button .toolbarbutton-badge,
-	toolbar #loop-button .toolbarbutton-badge-container,
-	toolbar #loop-button-throttled .toolbarbutton-badge,
-	toolbar #loop-button-throttled .toolbarbutton-badge-container{
+	toolbar .toolbarbutton-1 .toolbarbutton-badge,
+	toolbar .toolbarbutton-1 .toolbarbutton-badge-container {
 	  -moz-appearance:none !important;
 	  background:none !important;
 	  border:0 !important;
 	  padding:0 !important;
 	  box-shadow:none !important;
+	}
+	
+	toolbar .toolbarbutton-badge-stack {
+	  display: none !important;
 	}
 }
