--- a/xpi/content/css/winaero/mode_icons_big_extra.css
+++ b/xpi/content/css/winaero/mode_icons_big_extra.css
@@ -141,7 +141,8 @@
 	}
 	
 	#nav-bar #loop-button-throttled[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image,
-	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image {
+	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-container  image,
+	#nav-bar #loop-button[cui-areatype="toolbar"] > .toolbarbutton-badge-stack image {
 	  min-width:30px !important;
 	  height:30px !important;
 	}
