--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -183,6 +183,35 @@
 	  }
 	}
 	
+	/* Windows 10 tweaks */
+	@media (-moz-os-version: windows-win10) {
+	  #main-window[sizemode="normal"] #ctraddon_appbutton2{
+		margin-top:1px !important;
+		margin: 1px 0 2px 0px !important;
+	  }
+				
+	  #main-window[sizemode="maximized"] #ctraddon_appbutton2{
+		margin-top:0px !important;
+		margin: 0px 0 6px 0px !important;
+	  }
+	  
+	  #main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
+	  #main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
+	  #main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
+		padding-top: 2px !important;
+	  }
+
+	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-min image,
+	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-max image,
+	  #main-window[sizemode="normal"] #titlebar-buttonbox #titlebar-close image {
+		min-height: 10px !important;
+		height: 10px !important;
+		max-height: 10px !important;
+		margin-top: -5px !important;
+		margin-bottom: -5px !important;
+	  }
+	}
+	
 	/*developer theme additions */
 	#main-window[sizemode="maximized"][developertheme="true"] #TabsToolbar,
 	#main-window[sizemode="maximized"][developertheme="true"] #tabbrowser-tabs,
