--- a/xpi/content/css/linux/smallnavbutextra.css
+++ b/xpi/content/css/linux/smallnavbutextra.css
@@ -60,6 +60,10 @@
 	  padding-right:2px !important;
 	  transition: none !important;
 	}
+	
+	#main-window[fx42plus="true"] #nav-bar #notification-popup-box[hidden] + * {
+	  -moz-padding-start: 5px !important;
+	}
 
     #nav-bar * .toolbarbutton-icon,
 	#nav-bar * {
@@ -115,6 +119,10 @@
 	}
 
 	/* urlbar border tweaks */
+	#main-window[fx42plus="true"][defaultfxtheme="true"] #urlbar {
+	  min-height: 24px;
+	}
+
 	#main-window[defaultfxtheme="true"] #nav-bar #urlbar,
 	#main-window[defaultfxtheme="true"] #nav-bar .searchbar-textbox {
 	  border: 1px solid ThreeDShadow !important;
@@ -151,6 +159,14 @@
 	  padding: 0 !important;
 	  margin: 0 !important;
 	}
+
+	#navigator-toolbox #nav-bar toolbarbutton .toolbarbutton-badge-stack {
+	  padding-right: 1px !important;
+      padding-left: 1px !important;
+	  margin-right: 2px !important;
+      margin-left: 2px !important;
+	}
+
 	#nav-bar toolbarbutton .toolbarbutton-badge-container,
 	#nav-bar toolbarbutton .toolbarbutton-badge-stack {
 	  background: none !important;
