--- a/xpi/content/css/mac/smallnavbutextra.css
+++ b/xpi/content/css/mac/smallnavbutextra.css
@@ -121,6 +121,11 @@
 	  -moz-padding-start: 4px !important;
 	  transition: none !important;
 	}
+	
+	#main-window[fx42plus="true"] #nav-bar #notification-popup-box[hidden] + *,
+	#main-window[fx42plus="true"] #nav-bar #notification-popup-box + * {
+	  -moz-padding-start: 6px !important;
+	}
 
 	#nav-bar #urlbar-container[forwarddisabled]:hover:not([switchingtabs]) > #urlbar-wrapper > #urlbar {
 	  transition-delay: 0s !important;
@@ -134,7 +139,11 @@
 	#main-window #navigator-toolbox #nav-bar #urlbar-wrapper {
 	  -moz-box-align: center !important;
 	}
-	
+
+	#main-window[fx42plus="true"][defaultfxtheme="true"] #urlbar {
+	  min-height: 24px;
+	}
+
 	#main-window[defaultfxtheme="true"] #urlbar,
 	#main-window[defaultfxtheme="true"] #nav-bar .searchbar-textbox{
 	  border: 1px solid !important;
