--- a/xpi/content/css/tabs_squared-r-osx2.css
+++ b/xpi/content/css/tabs_squared-r-osx2.css
@@ -40,7 +40,13 @@
 	#tabbrowser-tabs:not([overflow="true"]) {
 	  margin-right: -8px !important;
 	}
-	
+
+	/*.tab-background-start[visuallyselected=true]::after,
+	.tab-background-start[visuallyselected=true]::before,
+	.tab-background-start,
+	.tab-background-end,
+	.tab-background-end[visuallyselected=true]::after,
+	.tab-background-end[visuallyselected=true]::before,*/
 	#tabbrowser-tabs{
 	  min-height: 0px !important;
 	}
@@ -342,7 +348,12 @@
 	#main-window[tabsintitlebar]:not([sizemode="maximized"]):not([inFullscreen]) #toolbar-menubar:-moz-any([autohide="true"][inactive],:not([autohide])) + #TabsToolbar .tab-background-middle:not([selected=true]) {
 	  clip-path: none !important;
 	}
-	
+
+	/* fix crash icons position */
+	.tabbrowser-tab[crashed] .tab-icon-overlay {
+	  margin-top:0px !important;
+	}
+
 	/* Pinned tabs & TabMixPlus/TabUtilities locked/protected tabs support */	
 	.tabbrowser-tab:not([pinned]) .tab-close-button{
 	  -moz-margin-end:-4px !important;
