--- a/xpi/content/css/winxp/overlayextra.css
+++ b/xpi/content/css/winxp/overlayextra.css
@@ -234,6 +234,34 @@
 	  border-style: none;
 	}
 	
+	/* addon-bar close button */
+	#ctraddon_addon-bar #ctraddon_addonbar-close	{
+	  -moz-appearance: none !important;
+	  -moz-image-region: rect(0, 64px, 16px, 48px);
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png");
+	  background: none !important;
+	  border-color: transparent !important;
+	  box-shadow: none !important;
+	}
+	
+	#ctraddon_addon-bar:-moz-lwtheme-brighttext #ctraddon_addonbar-close{
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/close2.png");
+	}
+
+	#ctraddon_addon-bar #ctraddon_addonbar-close:hover,
+	#ctraddon_addon-bar #ctraddon_addonbar-close:hover[selected="true"] {
+	  -moz-image-region: rect(0, 32px, 16px, 16px);
+	}
+
+	#ctraddon_addon-bar #ctraddon_addonbar-close:hover:active,
+	#ctraddon_addon-bar #ctraddon_addonbar-close:hover:active[selected="true"] {
+	  -moz-image-region: rect(0, 48px, 16px, 32px);
+	}
+
+	#ctraddon_addon-bar #ctraddon_addonbar-close[selected="true"] {
+	  -moz-image-region: rect(0, 16px, 16px, 0);
+	}
+	
 	/* fix recent icon stretching*/
     #nav-bar .toolbarbutton-1:not([type=menu-button]),
     #nav-bar .toolbarbutton-1 > .toolbarbutton-menubutton-button,
