--- a/xpi/content/overlay.css
+++ b/xpi/content/overlay.css
@@ -111,31 +111,9 @@
 	}
 
 	/* addon-bar close button */
-	#ctraddon_addon-bar #ctraddon_addonbar-close	{
-	  -moz-appearance: none !important;
-	  -moz-image-region: rect(0, 64px, 16px, 48px);
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png");
-	  background: none !important;
-	  border-color: transparent !important;
-	  box-shadow: none !important;
-	}
-	
-	#ctraddon_addon-bar:-moz-lwtheme-brighttext #ctraddon_addonbar-close{
-	  list-style-image: url("chrome://classic_theme_restorer/content/images/close2.png");
-	}
-
-	#ctraddon_addon-bar #ctraddon_addonbar-close:hover,
-	#ctraddon_addon-bar #ctraddon_addonbar-close:hover[selected="true"] {
-	  -moz-image-region: rect(0, 32px, 16px, 16px);
-	}
-
-	#ctraddon_addon-bar #ctraddon_addonbar-close:hover:active,
-	#ctraddon_addon-bar #ctraddon_addonbar-close:hover:active[selected="true"] {
-	  -moz-image-region: rect(0, 48px, 16px, 32px);
-	}
-
-	#ctraddon_addon-bar #ctraddon_addonbar-close[selected="true"] {
-	  -moz-image-region: rect(0, 16px, 16px, 0);
+	#ctraddon_addon-bar #ctraddon_addonbar-close image {
+	  width: 16px !important;
+	  height: 16px !important;
 	}
 	
 	/* custom bookmarks-menu-toolbar-button */
