--- a/xpi/content/css/win8/classictabsextra2c2.css
+++ b/xpi/content/css/win8/classictabsextra2c2.css
@@ -2,6 +2,74 @@
 
 @-moz-document url(chrome://browser/content/browser.xul){
 
+	/* tab colors */
+	/*.tabs-newtab-button:not(:-moz-lwtheme),
+	.tabbrowser-tab:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(transparent, hsla(0,0%,45%,.1) 1px, hsla(0,0%,32%,.2) 80%, hsla(0,0%,0%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	.tabs-newtab-button:hover:not(:-moz-lwtheme),
+	.tabbrowser-tab:not([selected]):hover:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(hsla(0,0%,100%,.3) 1px, hsla(0,0%,75%,.2) 80%, hsla(0,0%,60%,.2)),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}*/
+	.tabbrowser-tab[selected]:not(:-moz-lwtheme) .tab-content {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
+						linear-gradient(-moz-dialog, -moz-dialog) !important;
+	}
+	/*.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):not(:hover),
+	.tabbrowser-tab:not(:-moz-lwtheme):not([selected=true]):hover {
+	  color:black !important;
+	}*/
+	
+	/* tab colors lightweight theme */
+	.tabbrowser-tab[selected]:-moz-lwtheme .tab-content {
+	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
+	}
+	
+	/* tab tweaks */
+	.tabbrowser-tab .tab-stack {
+	  -moz-appearance: none !important;
+	  margin-top: 0px !important;
+	  margin-bottom: -5px !important;
+	}
+    
+	#TabsToolbar .tabbrowser-tab .tab-content{
+	  -moz-appearance: none !important;
+	  -moz-border-image: none !important;
+	  margin: 0 0 5px 0 !important;
+	}
+
+    /* lightweight theme tweaks*/
+	#navigator-toolbox #TabsToolbar:-moz-lwtheme{
+	  box-shadow:none !important;
+	  border-bottom: 1px solid transparent !important;
+	}
+	#navigator-toolbox #nav-bar:-moz-lwtheme{
+      box-shadow:none !important;
+	  border-top: 1px solid transparent !important;
+	}
+	
+	/* Windows 10 tweaks */
+	@media (-moz-os-version: windows-win10) {
+	  #main-window #navigator-toolbox #TabsToolbar:-moz-lwtheme,
+	  #main-window[defaultfxtheme="true"][fx32plus="true"] #TabsToolbar:not(:-moz-lwtheme),	
+	  #main-window[defaultfxtheme="true"][fx32plus="true"] #TabsToolbar:-moz-lwtheme {
+		border-bottom: 0 !important;
+	  }
+	}
+	
+	/* other */
+	#TabsToolbar:not(:-moz-lwtheme){
+	  box-shadow:none !important;
+	  border-bottom: 1px solid transparent !important;
+	}
+
+	#navigator-toolbox #nav-bar:not(:-moz-lwtheme){
+	  box-shadow:none !important;
+	  border-top: 1px solid transparent !important;
+	}
+	
 	/* Tabs toolbar tab close button (Fx31+) */
 	#ctraddon_tabs-closebutton{
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
@@ -44,7 +112,7 @@
 	  width: 16px !important;
 	}
 	
-	/* TabUtilities auto-reload extra */
+	/*TabUtilities autoreload extra*/
 	.tabbrowser-tab:not([pinned]):not([protected])[autoReload] .tab-close-button:hover,
 	.tabbrowser-tab:not([pinned]):not([protected])[autoReload] .tab-close-button:hover[selected="true"] {
 	  -moz-image-region: rect(0, 32px, 16px, 16px) !important;
@@ -53,33 +121,12 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/close.png") !important;
 	}
 
-	/* remove gaps before and after tabs */
 	.tabbrowser-arrowscrollbox > .arrowscrollbox-scrollbox {
-	  -moz-padding-start: 0px !important;
-	}
-	
-	#main-window[colorfultabs="true"] #TabsToolbar:not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button{
-      -moz-margin-start: 0px !important;
-	}
-
-	#TabsToolbar[currentset*="tabbrowser-tabs,tabmixScrollBox"]:not([orient="vertical"]) .tabs-newtab-button + .tabs-newtab-button{
-	  -moz-margin-start: 0px !important;
-	}
-	#TabsToolbar[currentset*="tabbrowser-tabs,tabmixScrollBox"]:not([orient="vertical"]) .tabs-newtab-button{
-	  -moz-margin-end: 0px !important;
+	  -moz-padding-start: 3px !important;
 	}
 		
-	#TabsToolbar:not([currentset*="tabbrowser-tabs,new-tab-button"]):not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
-	  -moz-margin-end: -15px !important;
-	}
-
-	#TabsToolbar[currentset*="tabbrowser-tabs,search-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]),
-	#TabsToolbar[currentset*="tabbrowser-tabs,urlbar-container"]:not([orient="vertical"]) #tabbrowser-tabs:not([overflow]) {
-	  -moz-margin-end: -15px !important;
-	}
-
-	#titlebar-placeholder-on-TabsToolbar-for-captions-buttons{
-	  -moz-margin-start: 4px !important;
+	.tabs-newtab-button{
+	  margin-right:-12px !important;
 	}
 	
 	/* TU workaround */
@@ -91,45 +138,5 @@
 	  -moz-margin-end:-15px !important;
 	}
 	/**/
-	
-	.tabbrowser-tab[selected=true]:-moz-lwtheme {
-	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.46) 50%) !important;
-	}
-	 	
-	.tabbrowser-tab[selected="true"]:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(rgba(255,255,255,.7), rgba(255,255,255,.4) 50%),
-						linear-gradient(-moz-dialog, -moz-dialog);
-	}
 
-	.tabbrowser-tab:not([selected="true"]):not(:hover):not(:-moz-lwtheme) {
-	  background-image: linear-gradient(transparent,transparent) !important;
-	}
-
-	.tabbrowser-tab:not([selected="true"]):hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(transparent,transparent) !important;
-	}
-		
-	.tabs-newtab-button:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(transparent,transparent) !important;
-	}
-
-	.tabs-newtab-button:hover:not(:-moz-lwtheme) {
-	  background-image: linear-gradient(transparent,transparent) !important;
-	}
-		
-	.tabbrowser-tab[pinned][titlechanged]:not([selected="true"]):not(:hover):not(:-moz-lwtheme){
-	  background-size: 100% 100% !important;
-	  background-image: none !important;
-	}
-	
-	/* Windows 10 tweaks */
-	@media (-moz-os-version: windows-win10) {
-	  #main-window #navigator-toolbox #TabsToolbar:-moz-lwtheme{
-		border-bottom: 0 !important;
-	  }
-	  #TabsToolbar:not([multibar]):-moz-lwtheme  {
-		margin-bottom: -1px !important;
-	  }
-	}
-	
 }
