--- a/xpi/content/css/win8/overlayextra.css
+++ b/xpi/content/css/win8/overlayextra.css
@@ -70,6 +70,22 @@
 	  -moz-padding-end: 14px !important;
 	}
 	
+	@media (-moz-os-version: windows-win10) {
+	  #main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar :-moz-any(#ctraddon_bookmarks-button,#ctraddon_history-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_ctr-button,#ctraddon_go-button) > .toolbarbutton-icon {
+		padding: 4px 6px !important;
+	  }
+	  #main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar #ctraddon_appbutton > .toolbarbutton-icon,
+	  #main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar #ctraddon_history-menu-toolbar-button > .toolbarbutton-icon,
+	  #main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar #ctraddon_bookmarks-menu-toolbar-button > .toolbarbutton-icon {
+		padding-top: 4px !important;
+		padding-bottom: 4px !important;	
+	  }
+	  #main-window[defaultfxtheme="true"][fx40plus="true"] #nav-bar #ctraddon_appbutton > .toolbarbutton-icon {
+		-moz-padding-start: 6px !important;
+		-moz-padding-end: 6px !important;
+	  }
+	}
+	
 	@media (min-resolution: 1.1dppx) {
 		#main-window[defaultfxtheme="true"][fx40plus="true"] :-moz-any(#ctraddon_history-button,#ctraddon_history-menu-toolbar-button,#ctraddon_back-button,#ctraddon_forward-button,#ctraddon_stop-button,#ctraddon_reload-button,#ctraddon_go-button) {
 		  list-style-image: url("chrome://browser/skin/Toolbar@2x.png");
