--- a/xpi/content/css/win8/back-forwardextra.css
+++ b/xpi/content/css/win8/back-forwardextra.css
@@ -28,6 +28,16 @@
 	  transition: none !important;
 	}
 	
+	@media (-moz-os-version: windows-win10) {
+	  #main-window[fx40plus="true"]:not([fx42plus="true"])[defaultfxtheme="true"] #notification-popup-box[hidden] + * {
+		-moz-padding-start: 0px !important;
+	  }
+	
+	  #main-window[fx42plus="true"][defaultfxtheme="true"] #nav-bar #notification-popup-box[hidden] + * {
+		-moz-padding-start: 4px !important;
+	  }
+	}
+	
 	/* START: urlbar border tweaking (default theme does not provide left urlbar border) */
 	#main-window[fx42plus="true"][defaultfxtheme="true"] #urlbar {
 	  min-height: 24px;
