--- a/xpi/content/css/appbutton2.css
+++ b/xpi/content/css/appbutton2.css
@@ -196,8 +196,8 @@
 	  }
 	  
 	  #main-window[fx40plus="true"][sizemode="maximized"] #ctraddon_appbutton2{
-		margin-top:-3px !important;
-		margin: -3px 0 6px -2px !important;
+		margin-top:-1px !important;
+		margin: -1px 0 6px -2px !important;
 	  }
 	  
 	  #main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
@@ -215,6 +215,33 @@
 		margin-top: -4px !important;
 		margin-bottom: -4px !important;
 	  }
+
+	  
+	  @media not all and (-moz-windows-theme:aero) {
+			
+		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-min image,
+		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-max image,
+		#main-window[sizemode="normal"] * #titlebar-buttonbox #titlebar-close image {
+		  min-height: 0px !important;
+		  height: 8px !important;
+		  max-height: 8px !important;
+		  margin-top: 0px !important;
+		  margin-bottom: 0px !important;
+		}
+
+		#main-window[sizemode="maximized"] #titlebar #titlebar-content #ctraddon_appbutton2{
+		  margin-top:-1px !important;
+		  margin: -1px 0 6px -2px !important;
+		}
+
+		#main-window[tabsintitlebar][chromehidden~="menubar"][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar ~ #TabsToolbar,
+		#main-window[tabsintitlebar][sizemode="normal"]:not([inFullscreen])[tabsontop="false"] #toolbar-menubar[autohide="true"][inactive] ~ #TabsToolbar,
+		#main-window[tabsintitlebar][sizemode="normal"] #toolbar-menubar[autohide="true"][inactive="true"]:not([customizing="true"]) ~ #TabsToolbar {
+		  padding-top: 7px !important;
+		}
+
+	  }
+
 	}
 	
 	/*developer theme additions */
