--- a/xpi/content/css/appbutton2wt2.css
+++ b/xpi/content/css/appbutton2wt2.css
@@ -15,6 +15,25 @@
 	  -moz-appearance: none !important;
       margin: 0 -34px 0 -26px !important;
 	}
+	
+	@media (-moz-os-version: windows-win10) {
+		#ctraddon_appbutton2:-moz-locale-dir(ltr) > label{
+		  -moz-appearance: none !important;
+		  margin: -4px -26px 0 -34px !important;
+		  padding-top: 4px !important;
+		}
+		#ctraddon_appbutton2:-moz-locale-dir(rtl) > label{
+		  -moz-appearance: none !important;
+		  margin: -4px -34px 0 -26px !important;
+		  padding-top: 4px !important;
+		}
+		
+		#ctraddon_appbutton2 > .toolbarbutton-menu-dropmarker{
+		  -moz-appearance: none !important;
+		  margin-top: 0px !important;
+		  padding-top: 2px !important;
+		}
+	}
 
 	#ctraddon_appbutton2 > .toolbarbutton-menu-dropmarker,
 	#ctraddon_appbutton2:hover:active > .toolbarbutton-menu-dropmarker,
